--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -8,39 +8,41 @@
 <body>
 <div style="width: 80%"></div>
 <script>
-    d3.csv("data_sample.csv", function(data) {
-        // the columns you'd like to display
-        var columns = ["date", "EstimatedCost", "RawMaterial", "Workmanship", "YearlyStorage"];
+	d3.csv('data_sample.csv', function(data) {
+		// the columns you'd like to display
+		var columns = ['date', 'EstimatedCost', 'RawMaterial', 'Workmanship', 'YearlyStorage'];
 
-        var table = d3.select("#container").append("table"),
-            thead = table.append("thead"),
-            tbody = table.append("tbody");
+		var table = d3.select('body').append('table');
+/*			thead = table.append('thead');
+			tbody = table.append('tbody');
 
-        // append the header row
-        thead.append("tr")
-            .selectAll("th")
-            .data(columns)
-            .enter()
-            .append("th")
-            .text(function(column) { return column; });
+		// append the header row
+		thead.append('tr')
+			.selectAll('th')
+			.data(columns)
+			.enter()
+			.append('th')
+			.text(function(column) { return column; });
 
-        // create a row for each object in the data
-        var rows = tbody.selectAll("tr")
-            .data(data)
-            .enter()
-            .append("tr");
+		// create a row for each object in the data
+		var rows = tbody.selectAll('tr')
+			.data(data)
+			.enter()
+			.append('tr');
 
-        // create a cell in each row for each column
-        var cells = rows.selectAll("td")
-            .data(function(row) {
-                return columns.map(function(column) {
-                    return {column: column, value: row[column]};
-                });
-            })
-            .enter()
-            .append("td")
-            .text(function(d) { return d.value; });
-    });
+		// create a cell in each row for each column
+		var cells = rows.selectAll('td')
+			.data(function(row) {
+				return columns.map(function(column) {
+					return {column: column, value: row[column]};
+				});
+			})
+			.enter()
+			.append('td')
+			.text(function(d) { return d.value; });
+
+ */
+	});
 </script>
 </body>
 </html>
