Removed block comment

--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -13,7 +13,7 @@
 		var columns = ['date', 'EstimatedCost', 'RawMaterial', 'Workmanship', 'YearlyStorage'];
 
 		var table = d3.select('body').append('table');
-/*			thead = table.append('thead');
+			thead = table.append('thead');
 			tbody = table.append('tbody');
 
 		// append the header row
@@ -40,8 +40,6 @@
 			.enter()
 			.append('td')
 			.text(function(d) { return d.value; });
-
- */
 	});
 </script>
 </body>
