--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -13,11 +13,11 @@
 		var columns = ['date', 'EstimatedCost', 'RawMaterial', 'Workmanship', 'YearlyStorage'];
 
 		var table = d3.select('body').append('table');
-			thead = table.append('thead');
-			tbody = table.append('tbody');
+			//thead = table.append('tr');
+			//tbody = table.append('tbody');
 
 		// append the header row
-		thead.append('tr')
+		table.append('tr')
 			.selectAll('th')
 			.data(columns)
 			.enter()
@@ -25,13 +25,13 @@
 			.text(function(column) { return column; });
 
 		// create a row for each object in the data
-		var rows = tbody.selectAll('tr')
+		var rows = table.append('tr')
 			.data(data)
 			.enter()
 			.append('tr');
 
 		// create a cell in each row for each column
-		var cells = rows.selectAll('td')
+		var cells = rows.append('td')
 			.data(function(row) {
 				return columns.map(function(column) {
 					return {column: column, value: row[column]};
