--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Horizontal Stacked Bar Chart</title>
-	<script src="../libs/d3/d3.min.js"></script>
+	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 </head>
 <body>
 <div style="width: 80%"></div>
