--- a/Exercise/index.html
+++ b/Exercise/index.html
@@ -11,7 +11,11 @@
 	</style>
 </head>
 <body>
-<div style="width: 80%"></div>
+<div style="width: 80%">
+	<div id="canvas" width="100%">
+		<svg width="800" height="500"></svg>
+	</div>
+</div>
 <script>
 	d3.csv("data_sample.csv",d=>{
 		return {
@@ -58,28 +62,152 @@
 				.append("td")
 				.html(function(d) {
 					count += 1;
-					get_column = d.value;
-					row_array.push(get_column);
-					console.log(d);
-
 					if (d.column === 'ActualCost') {
-						return row_array[count - 4] + row_array[count - 3] + row_array[count - 2];
+						let actual_cost = Number(row_array[count - 4]) + Number(row_array[count - 3]) + Number(row_array[count - 2]);
+						row_array.push(actual_cost);
+						d.value = actual_cost;
+						return actual_cost;
 					}
 					if (d.column === 'SoldPrice') {
-						return (row_array[count - 6]*1.1).toFixed(2);
+						let sold_price = parseFloat(Number(row_array[count - 6] * 1.1).toFixed(2));
+						row_array.push(sold_price);
+						d.value = sold_price;
+						return sold_price;
 					}
 					if (d.column === 'Margin of Profit') {
-						return ((row_array[count - 7]*1.1) - (row_array[count - 6] + row_array[count - 5] + row_array[count - 4])).toFixed(2);
+						let margin = Number(row_array[count - 2] - row_array[count - 3]).toFixed(2);
+						row_array.push(margin);
+						d.value = margin;
+						return margin;
 					}
+					row_array.push(d.value);
+
+
 					return d.value;
 				});
-
 			return table;
 		}
 
 		// render the table
 		tabulate(data, ['date','EstimatedCost','RawMaterial','Workmanship','YearlyStorage', 'ActualCost', 'SoldPrice', 'Margin of Profit']);
+
+		function getColumn(column) {
+			const table_rows = d3.selectAll("tr").selectAll("td").data();
+			let column_array = []
+			d3.map(table_rows, (row) => {
+				if (row.column == column) {
+					column_array.push(column == 'date' ? row.value : Number(row.value));
+				}
+			});
+			return column_array;
+		}
+
+		let dates = getColumn('date');
+		let estimated_cost = getColumn('EstimatedCost');
+		let actual_cost = getColumn('ActualCost');
+		let margin_profit = getColumn('Margin of Profit');
+
+		const est_min = d3.min(estimated_cost);
+		const est_max = d3.max(estimated_cost);
+		const est_min_max = [est_min, est_max];
+
+		function plot(xdata, ydata, margin, width, height, color, svg) {
+			var xy = []; // start empty, add each element one at a time
+			for (var i = 0; i < xdata.length; i++) {
+				xy.push({ x: xdata[i], y: ydata[i] });
+			}
+
+			console.log("xy is:", xy); // shows the data structure
+
+			var xscl = d3.scaleLinear()
+				.domain(d3.extent(xy, function (d) { return d.x; })) //use just the x part
+				.range([margin.left, width + margin.left])
+
+			var yscl = d3.scaleLinear()
+				.domain(d3.extent(xy, function (d) { return d.y; })) // use just the y part
+				.range([height + margin.top, margin.top])
+
+			var slice = d3.line()
+				.x(function (d) { return xscl(d.x); }) // apply the x scale to the x data
+				.y(function (d) { return yscl(d.y); }) // apply the y scale to the y data
+
+			svg.append("path")
+				.attr("class", "line")
+				.attr("d", slice(xy)) // use the return value of slice(xy) as the data, 'd'
+				.style("fill", "none")
+				.style("stroke", color)
+				.style("stroke-width", 2);
+		}
+
+		var margin = { top: 28, right: 10, bottom: 10, left: 10 },
+			width = 800;
+		height = 500;
+
+		var svg = d3.select("svg");
+
+		svg.append('rect') // outline for reference
+			.attr({
+				x: margin.left, y: margin.top,
+				width: width,
+				height: height,
+				stroke: 'black',
+				'stroke-width': 0.5,
+				fill: 'white'
+			});
+
+		var xdata = d3.range(0, 21);
+
+		plot(xdata, estimated_cost, margin, width, height, 'red', svg);
+		plot(xdata, actual_cost, margin, width, height, 'blue', svg);
+		plot(xdata, margin_profit, margin, width, height, 'green', svg);
+
+		const legend = svg.append('g')
+			.attr("class", "legend")
+			.attr("transform", "translate(0,50)")
+			.selectAll()
+			.data([{ name: "EstimatedCost", class: "EstimatedCost" },
+			{ name: "ActualCost", class: "ActualCost" },
+			{ name: "Margin of Profit", class: "MarginOfProfit" }])
+			.enter()
+			.append("g")
+			.attr("class", d => d.class)
+			.attr("transform", (d, i) => {
+				return `translate(${width / 1.3},${i * 20})`
+			})
+
+		legend.append("rect")
+			.attr('width', "10px")
+			.attr('height', "10px")
+		legend.append("text")
+			.text(d => d.name)
+			.attr("dx", "20px")
+			.attr("dy", "10px")
 	});
 </script>
 </body>
 </html>
+<style>
+	table,
+	th,
+	tr,
+	td {
+		border: 2px solid;
+		padding: 4px;
+	}
+
+	.LegendTempMovingAvg {
+		fill: green;
+	}
+
+	.EstimatedCost {
+		fill: red;
+	}
+
+	.ActualCost {
+		fill: blue;
+	}
+
+	.MarginOfProfit {
+		fill: green;
+	}
+</style>
